--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "expo": "^26.0.0",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
+    "react-native-modal-selector": "^0.0.27",
+    "react-native-super-grid": "^2.1.0",
     "react-navigation": "^1.5.11"
   }
 }
